feat: Add company retrieval by email and improve material summation logic in AgreementService
- Implemented findCompanyByEmail method in AgreementService to fetch company details by email.
- Refactored sumReintroducedMaterial and calculateCO2SavedByCompany methods to use streams for better performance and readability.
- Updated AgreementService to handle null checks more gracefully.
- Enhanced update logic in AgreementService to only modify fields if provided in the update request.

feat: Introduce new message retrieval methods in MessageService

- Added getByCompany method to retrieve messages associated with a specific company.

chore: Add diagrams for service architecture

- Added complete-diagramatemplates.drawio.png and service-diagram.drawio.png to static resources.

test: Update DemandRestControllerTest for improved readability and consistency

- Refactored test cases to enhance clarity and maintain consistent formatting.

test: Modify GlobalConfigurationRestControllerTest to use ADMIN role

- Changed user role for global configuration retrieval test to ADMIN for better access control.

test: Enhance ImageRestControllerTest with additional offer image retrieval tests

- Added tests for retrieving offer images based on status and ownership.

test: Update MatchingRestControllerTest for consistent formatting

- Refactored test cases for better readability and consistency.

test: Improve MessageRestControllerTest for clarity

- Refactored test cases to enhance readability and maintain consistent formatting.

test: Update OfferRestControllerTest for improved readability

- Refactored test cases to enhance clarity and maintain consistent formatting.

chore: Update Dockerfiles and docker-compose for health checks

- Added curl installation to Dockerfiles for health check functionality.
- Implemented health checks for utility-service and app-service in docker-compose.yml.

docs: Update Postman collection for API endpoints

- Added registration endpoint for new compan