@@ -9,7 +9,6 @@ import es.urjc.ecomostoles.backend.service.OfferService;
 import es.urjc.ecomostoles.backend.service.ReportService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
@@ -22,7 +21,9 @@ import org.springframework.web.bind.annotation.RestController;
 import java.security.Principal;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * REST API controller for high-level reporting and analytical exports.
@@ -32,13 +33,15 @@ import java.util.stream.Collectors;
 @Tag(name = "Reports", description = "Endpoints for platform auditing and data exports")
 public class ReportRestController {
 
+    private static final Logger log = LoggerFactory.getLogger(ReportRestController.class);
+
     private final ReportService reportService;
     private final CompanyService companyService;
     private final OfferService offerService;
     private final AgreementService agreementService;
 
-    public ReportRestController(ReportService reportService, CompanyService companyService, 
-                                OfferService offerService, AgreementService agreementService) {
+    public ReportRestController(ReportService reportService, CompanyService companyService,
+            OfferService offerService, AgreementService agreementService) {
         this.reportService = reportService;
         this.companyService = companyService;
         this.offerService = offerService;
@@ -47,14 +50,30 @@ public class ReportRestController {
 
     @Operation(summary = "Get my personal sustainability impact", description = "Returns the cumulative CO2 savings and managed materials for the authenticated company.")
     @GetMapping("/company/me")
-    @PreAuthorize("hasRole('COMPANY')")
+    @PreAuthorize("hasAnyRole('COMPANY', 'ADMIN')")
     public ResponseEntity<CompanyImpactDTO> getMyImpact(Principal principal) {
+        if (principal == null) {
+            log.warn("[API] GET /reports/company/me — Unauthorized access attempt");
+            throw new org.springframework.web.server.ResponseStatusException(
+                    org.springframework.http.HttpStatus.UNAUTHORIZED);
+        }
+
+        log.debug("[API] GET /reports/company/me — Calculating impact for: {}", principal.getName());
+
         Company company = companyService.findByEmail(principal.getName())
-                .orElseThrow(() -> new org.springframework.web.server.ResponseStatusException(org.springframework.http.HttpStatus.NOT_FOUND, "Company not found"));
-        
+                .orElseThrow(() -> new org.springframework.web.server.ResponseStatusException(
+                        org.springframework.http.HttpStatus.NOT_FOUND, "Company not found: " + principal.getName()));
+
         double co2Saved = agreementService.calculateCO2SavedByCompany(company.getId());
         double materialsManaged = agreementService.sumReintroducedMaterial(company);
-        
+
+        // Round to 2 decimal places
+        co2Saved = Math.round(co2Saved * 100.0) / 100.0;
+        materialsManaged = Math.round(materialsManaged * 100.0) / 100.0;
+
+        log.info("[API] GET /reports/company/me — Result for {}: {} Kg CO2, {} Kg material",
+                company.getCommercialName(), co2Saved, materialsManaged);
+
         return ResponseEntity.ok(new CompanyImpactDTO(co2Saved, materialsManaged, "kg"));
     }
 
@@ -81,21 +100,19 @@ public class ReportRestController {
     }
 
     @Operation(summary = "Get CO2 impact ranking", description = "Returns a list of companies ordered by their CO2 savings impact.")
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Ranking returned successfully")
-    })
+    @ApiResponse(responseCode = "200", description = "Ranking returned successfully")
     @GetMapping("/ranking")
-    @PreAuthorize("hasAnyRole('ADMIN', 'COMPANY')")
+    @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<List<CompanyDTO>> getCo2Ranking() {
         Map<Long, Double> co2Map = agreementService.getCO2Ranking();
-        
+
         List<CompanyDTO> topCompanies = companyService.getAll().stream().map(e -> {
             CompanyDTO dto = new CompanyDTO(e);
             dto.setCo2Saved(co2Map.getOrDefault(e.getId(), 0.0));
             dto.setSector(e.getIndustrialSector() != null ? e.getIndustrialSector() : "Industria");
             return dto;
         }).sorted((a, b) -> b.getCo2Saved().compareTo(a.getCo2Saved()))
-          .collect(Collectors.toList());
+                .toList();
 
         for (int i = 0; i < topCompanies.size(); i++) {
             topCompanies.get(i).setRanking(i + 1);
